# data-engineering

./: .env.example  Makefile  docker-compose.yml  notes.md  readme.es.md  readme.md
.github/workflows/: create_tasks.yml
code/extract-load/: Dockerfile  pyproject.toml  readme.es.md  readme.md
code/extract-load/src/mediotiempo_data/: __init__.py  database_interactions.py  torneo_regular_resolver.py
code/extract-load/tests/: test_torneo_regular_resolver.py
code/transform/: Dockerfile  readme.es.md  readme.md
code/transform/project/: dbt_project.yml  profiles.yml
code/transform/project/models/marts/: final_league_table.sql
code/transform/project/models/staging/: sources.yml  stg_scores.sql  stg_teams.sql  stg_tournaments.sql
docs/: architecture.drawio  workflow.drawio
infra/airflow/dags/: reddit_dataengineering.py
infra/sql/: init.sql
